# pbpstats

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: conf.py  index.rst  pbpstats.data_loader.data_nba.boxscore.rst  pbpstats.data_loader.data_nba.enhanced_pbp.rst  pbpstats.data_loader.data_nba.pbp.rst  pbpstats.data_loader.data_nba.possessions.rst  pbpstats.data_loader.data_nba.rst  pbpstats.data_loader.data_nba.schedule.rst  pbpstats.data_loader.live.boxscore.rst  pbpstats.data_loader.live.enhanced_pbp.rst  pbpstats.data_loader.live.pbp.rst  pbpstats.data_loader.live.possessions.rst  pbpstats.data_loader.live.rst  pbpstats.data_loader.rst  pbpstats.data_loader.stats_nba.boxscore.rst  pbpstats.data_loader.stats_nba.enhanced_pbp.rst  pbpstats.data_loader.stats_nba.game_finder.rst  pbpstats.data_loader.stats_nba.league_game_log.rst  pbpstats.data_loader.stats_nba.pbp.rst  pbpstats.data_loader.stats_nba.possessions.rst  pbpstats.data_loader.stats_nba.rst  pbpstats.data_loader.stats_nba.scoreboard.rst  pbpstats.data_loader.stats_nba.shots.rst  pbpstats.data_loader.stats_nba.summary.rst  pbpstats.objects.rst  pbpstats.resources.boxscore.rst  pbpstats.resources.enhanced_pbp.data_nba.rst  pbpstats.resources.enhanced_pbp.live.rst  pbpstats.resources.enhanced_pbp.rst  pbpstats.resources.enhanced_pbp.stats_nba.rst  pbpstats.resources.games.rst  pbpstats.resources.pbp.rst  pbpstats.resources.possessions.rst  pbpstats.resources.rst  pbpstats.resources.shots.rst  pbpstats.rst  quickstart.rst
pbpstats/: __init__.py  client.py  data_game_data.py  data_pbp_event.py  data_period.py  game_data.py  overrides.py  pbp_event.py  period.py  possession_details.py  schedule_data.py  stats_game_data.py  stats_pbp_event.py  stats_period.py  utils.py
tests/: test_client.py  test_data_game_data.py  test_data_pbp_event.py  test_pbp_event_consistency.py  test_possession_details.py  test_schedule_data.py  test_stats_game_data.py  test_stats_pbp_event.py  test_utils.py
(+264 files in other folders)
