[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "pbpstats"
version = "1.3.5"
description = "A package to scrape and parse NBA, WNBA and G-League play-by-play data"
authors = ["dblackrun <darryl.blackport@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
responses = "^0.18.0"
furl = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
