[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["pbpstats/resources/enhanced_pbp/__init__.py"]

[tool.poetry]
name = "pbpstats"
version = "1.3.9"
description = "A package to scrape and parse NBA, WNBA and G-League play-by-play data"
authors = ["dblackrun <darryl.blackport@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
responses = "^0.18.0"
furl = "^2.1.3"
pre-commit = "^2.17.0"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
